--- a/css/styles.css
+++ b/css/styles.css
@@ -390,20 +390,19 @@ font-weight: bold;
  
 }
 
-/*
-.gridTalleres {
-display: flex;
-justify-content: center;
-flex-direction: column;
-width: 300px;
-height: auto;
-border: 1px solid red;
+/* eventos */
 
-  
+.videoContainer {
+  position: relative;
+  padding-top: 56.25%; /* proporción 16:9 */
+  height: 0;
+  overflow: hidden;
 }
 
-.gridBanner {
-display: flex;
-border: 1px solid blue;
-width: 100%;
-}  */
+.videoContainer iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
