--- a/css/styles.css
+++ b/css/styles.css
@@ -74,10 +74,11 @@ Cian intermedio
   
   /* Texto */
   p {
-    font-size: larger;
+    font-size: 30px;
     font-weight: bold;
     color: black;
     text-shadow: 2rem black;
+    text-transform: uppercase;
   }
   
   /* Footer */
@@ -129,13 +130,13 @@ border-radius: 10px;
 
     }
 
-    .tituloSeccion {
-      margin: 10px 10px;
-        font-size: x-large;
-        text-align: center;
-      
-        
-    }
+.tituloSeccion {
+  margin: 10px 10px;
+  font-size: 100PX;
+  text-align: center;
+  color: hwb(60 54% 3%); /* beige claro */
+  text-shadow: 3px 3px 6px rgba(0, 0, 0, 0.2);
+}
 
     .destacado {
       color: #FFB000;
@@ -240,12 +241,6 @@ h4 {
 p, h1, h2, h3 {
   text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
 }
-h1, h2, h3, h4 {
-  color: hwb(60 54% 3%); /* beige claro */
-  text-shadow:#00135E 10px 0 20px;
-  
-  
-}
 
 /* contactoo*/
 .formulario{
@@ -302,11 +297,10 @@ button:hover {
   box-shadow: 0 0 10px rgba(0,0,0,0.2);
   
 }
-.tituloSeccion  {
-  color: hwb(60 54% 3%); /* beige claro */
+
   
   
-}
+
 .encabezadoSubtitulo {
 font-size: larger;
 font-weight: bold;
@@ -318,7 +312,6 @@ font-weight: bold;
 
 /* Contenedor principal de Grid */
 
-/* responsive para tablets */
 
 .gridContainer {
   display: grid;
@@ -392,17 +385,40 @@ font-weight: bold;
 
 /* eventos */
 
-.videoContainer {
-  position: relative;
-  padding-top: 56.25%; /* proporción 16:9 */
-  height: 0;
-  overflow: hidden;
+/* videos responsive 2x2 */
+.videoGrid {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 1.5rem;
+  padding: 1rem;
+  max-width: 1000px;
+  margin: auto;
 }
 
-.videoContainer iframe {
+.videoItem {
+  aspect-ratio: 16 / 9;
+  position: relative;
+  width: 100%;
+}
+
+.videoItem iframe {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
+  border: none;
+  border-radius: 10px;
+}
+
+/* Una sola columna en pantallas mobile*/
+@media (max-width: 768px) {
+  .videoGrid {
+    grid-template-columns: 1fr;
+  }
+}
+
+h2 {
+   color: hwb(60 54% 3%); /* beige claro */
+  text-shadow:#00135E 10px 0 20px;
 }
