--- a/css/styles.css
+++ b/css/styles.css
@@ -298,8 +298,15 @@ h4 {
     min-height: 200px;
   }
    .parrafoQuienes {
-    font-size: 1rem;
-    padding: 1rem;
+     background-color: rgba(245, 245, 220, 0.85);
+  padding: 1.5rem;
+  border-radius: 12px;
+  margin: 1rem auto;
+  max-width: 900px;
+  line-height: 1.6;
+  font-size: 1.5rem;
+  box-shadow: 0 0 10px rgba(0,0,0,0.2);
+  
   }
 }
 
