--- a/sass/partials/_header.scss
+++ b/sass/partials/_header.scss
@@ -37,6 +37,7 @@ header {
   .nav-link {
     color: $color-azul-oscuro;
     transition: color 0.3s ease;
+    font-size: 20px;
 
     &:hover {
       color: $color-amarillo;
