--- a/sass/partials/_index.scss
+++ b/sass/partials/_index.scss
@@ -64,6 +64,9 @@ text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
   line-height: 1.6;
   font-size: 1.5rem;
   box-shadow: $sombra;
+   font-size: larger;
+  font-weight: bold;
+  color: $color-negro;
 }
 
 .imagen1 {
