--- a/css/styles.css
+++ b/css/styles.css
@@ -492,12 +492,28 @@ main {
   margin-bottom: 1.5rem;
 }
 
-.mapa {
-  width: 100%;
-  height: 400px;
-  border: none;
+.mapaTexto {
+  position: relative;
+  padding-bottom: 56.25%;
+  height: 0;
+  overflow: hidden;
+  margin-bottom: 2rem;
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+}
+.mapaTexto iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: none;
+}
+.mapaTexto p {
+  position: relative;
+  margin-top: 1rem;
+  font-size: 1rem;
+  color: #111;
 }
 
 .formulario {
