--- a/sass/partials/_encontranos.scss
+++ b/sass/partials/_encontranos.scss
@@ -22,10 +22,29 @@
   margin-bottom: 1.5rem;
 }
 
-.mapa {
-  width: 100%;
-  height: 400px;
-  border: none;
+
+.mapaTexto {
+  position: relative;
+  padding-bottom: 56.25%; // proporción 16:9
+  height: 0;
+  overflow: hidden;
+  margin-bottom: 2rem;
   border-radius: $radio-borde;
   box-shadow: $sombra;
+
+  iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: none;
+  }
+
+  p {
+    position: relative;
+    margin-top: 1rem;
+    font-size: 1rem;
+    color: $color-gris;
+  }
 }
