--- a/css/styles.css
+++ b/css/styles.css
@@ -497,9 +497,10 @@ main {
   padding-bottom: 56.25%;
   height: 0;
   overflow: hidden;
-  margin-bottom: 2rem;
+  margin: 2rem auto 2rem auto;
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  max-width: 90%;
 }
 .mapaTexto iframe {
   position: absolute;
