--- a/sass/partials/_contacto.scss
+++ b/sass/partials/_contacto.scss
@@ -1,5 +1,6 @@
 @use 'variables' as *;
 
+
 .formulario {
   max-width: 600px;
   margin: 2rem auto;
@@ -7,41 +8,42 @@
   padding: $espaciado;
   border-radius: $radio-borde;
   box-shadow: $sombra;
-}
 
-.formulario label {
-  display: block;
-  margin-bottom: 0.5rem;
-  font-weight: bold;
-}
+  label {
+    display: block;
+    margin-bottom: 0.5rem;
+    font-weight: bold;
+  }
 
-.formulario input,
-.formulario textarea {
-  width: 100%;
-  padding: 0.5rem;
-  margin-bottom: 1rem;
-  border: 1px solid $color-gris;
-  border-radius: 5px;
-  font-size: 1rem;
-}
+  input,
+  textarea {
+    width: 100%;
+    padding: 0.5rem;
+    margin-bottom: 1rem;
+    border: 1px solid $color-gris;
+    border-radius: 5px;
+    font-size: 1rem;
+  }
 
-.formulario button {
-  background-color: $color-azul-oscuro;
-  color: $color-blanco;
-  border: none;
-  padding: 0.75rem 1.5rem;
-  font-size: 1rem;
-  border-radius: 5px;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
+  button {
+    background-color: $color-azul-oscuro;
+    color: $color-blanco;
+    border: none;
+    padding: 0.75rem 1.5rem;
+    font-size: 1rem;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
 
-&:hover {
-  background-color: $color-azul-electrico;
+    &:hover {
+      background-color: $color-azul-electrico;
+    }
   }
 }
 
+/* Párrafo informativo de contacto */
 .parrafoContacto {
- background-color: $color-beige;
-border-radius: 5px;
-padding: 10px;
+  background-color: $color-beige;
+  border-radius: 5px;
+  padding: 10px;
 }
