--- a/sass/partials/_eventos.scss
+++ b/sass/partials/_eventos.scss
@@ -78,3 +78,46 @@
 
 }
 
+@media (min-width: 768px) and (max-width: 1024px) {
+  .seccionEvento {
+    padding: 1.5rem;
+    margin: 1rem auto;
+    max-width: 90%;
+  }
+
+  .tituloSeccion,
+  .tituloSubseccion {
+    font-size: 1.5rem;
+    padding: 0.5rem 1rem;
+    color: #222; 
+  }
+
+  .articuloEvento {
+    padding: 0 1rem;
+
+    .parrafoEvento {
+      font-size: 1rem;
+      line-height: 1.6;
+      text-align: center;
+    }
+  }
+
+  .carouselWrapper {
+    max-width: 90%;
+    padding: 0 1rem;
+  }
+
+  .galeriaVideos {
+    padding: 0 1rem;
+
+    .videoGrid {
+      grid-template-columns: 1fr 1fr;
+      gap: 1rem;
+    }
+
+    .videoItem iframe {
+      height: 220px;
+    }
+  }
+}
+
